--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "axios": "^1.13.3",
+    "bullmq": "^5.67.1",
+    "fluent-ffmpeg": "^2.1.3",
+    "framer-motion": "^12.28.1",
+    "googleapis": "^170.1.0",
+    "ioredis": "^5.9.2",
+    "lucide-react": "^0.562.0",
+    "mongoose": "^9.1.5",
     "next": "16.1.1",
+    "next-auth": "^4.24.13",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-dropzone": "^14.3.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
