--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "worker": "tsx scripts/worker.ts",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "axios": "^1.13.3",
     "bullmq": "^5.67.1",
+    "dotenv": "^17.2.3",
     "fluent-ffmpeg": "^2.1.3",
     "framer-motion": "^12.28.1",
     "googleapis": "^170.1.0",
@@ -21,10 +24,12 @@
     "next-auth": "^4.24.13",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-dropzone": "^14.3.8"
+    "react-dropzone": "^14.3.8",
+    "tsx": "^4.21.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/fluent-ffmpeg": "^2.1.28",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
